--- a/BulmaWebsiteRecreation.html
+++ b/BulmaWebsiteRecreation.html
@@ -7,5 +7,12 @@
     <title>BulmaWebsiteRecreation</title>
 </head>
 <body>
+    <nav class = "navbar-is-primary">
+        <div class = "navbar-brand">
+            <a class = "navbar-item" href="https://bulma.io">
+                <img src = "https://bulma.io/images/bulma-logo.png" alt = "The Bulma Framework" width = "112" height = "28">
+            </a>
+        </div>
+    </nav>
 </body>
 </html>
