--- a/BulmaWebsiteRecreation.html
+++ b/BulmaWebsiteRecreation.html
@@ -13,6 +13,34 @@
                 <img src = "https://bulma.io/images/bulma-logo.png" alt = "The Bulma Framework" width = "112" height = "28">
             </a>
         </div>
+        <div class = "navbar-start">
+            <a class = "navbar-item" href = "https://bulma.io">
+            Home
+            </a>
+            <div ckass = "navbar-item-has-dropdown is-hoverable"></div>
+            <a class = "navbar-link" href = "https://bulma.io/documentation/overview/start/">
+            Docs
+           </a>
+           <div class = "navbar-dropdown">
+            <a class = "navbar-item" href = "https://bulma.io/documentation/overview/start/">
+            Overview
+            </a>
+            <a class = "navbar-item" href = "https://bulma.io/documentation/overview/modifiers/">
+                Modifiers
+            <a class = "navbar-item" href = "https://bulma.io/documentation/columns/basics/">
+                Columns
+            </a>
+            <a class = "navbar-item" href = "https://bulma.io/documentation/layout/container/">
+                Containers
+            </a>
+            <a class = "navbar-item" href = "https://bulma.io/documentation/form/general/">
+                Forms
+            </a>
+            <a class = "navbar-item" href = https://bulma.io/documentation/elements/box/">
+                Boxes
+            </a> 
+           </div>
+        </div>
     </nav>
 </body>
 </html>
