more links, separatioin

--- a/BulmaWebsiteRecreation.html
+++ b/BulmaWebsiteRecreation.html
@@ -39,7 +39,14 @@
             <a class = "navbar-item" href = https://bulma.io/documentation/elements/box/">
                 Boxes
             </a> 
-           </div>
+            <hr class = "navbar-divider">
+            <a class = "navbar-item" href = "https://bulma.io/documentation/elements/box/">
+                Elements
+            </a>
+            <a class = "navbar-item is-active" href = "https://bulma.io/documentation/components/breadcrumb/">
+                Components
+            </a>
+            </div>
         </div>
     </nav>
 </body>
