--- a/BulmaWebsiteRecreation.html
+++ b/BulmaWebsiteRecreation.html
@@ -13,17 +13,18 @@
                 <img src = "https://bulma.io/images/bulma-logo.png" alt = "The Bulma Framework" width = "112" height = "28">
             </a>
         </div>
+    <div id="navMenuColorprimary-example" class="navbar-menu">
         <div class = "navbar-start">
             <a class = "navbar-item" href = "https://bulma.io">
-            Home
+                Home
             </a>
-            <div ckass = "navbar-item-has-dropdown is-hoverable"></div>
+            <div class = "navbar-item-has-dropdown is-hoverable"></div>
             <a class = "navbar-link" href = "https://bulma.io/documentation/overview/start/">
-            Docs
+                Docs
            </a>
-           <div class = "navbar-dropdown">
+           <div class ="navbar-dropdown">
             <a class = "navbar-item" href = "https://bulma.io/documentation/overview/start/">
-            Overview
+                Overview
             </a>
             <a class = "navbar-item" href = "https://bulma.io/documentation/overview/modifiers/">
                 Modifiers
@@ -48,6 +49,7 @@
             </a>
             </div>
         </div>
+    </div>
     </nav>
 </body>
 </html>
