--- a/no-framework/BulmaWebsiteRecreation.html
+++ b/no-framework/BulmaWebsiteRecreation.html
@@ -48,10 +48,10 @@
             <a class = "navbar-item" href = "https://bulma.io/documentation/form/general/">
                 Forms
                 </a>
-            <hr class = "navbar-divider">
-            <a class = "navbar-item" href = https://bulma.io/documentation/elements/box/">
+            <a class = "navbar-item" href = "https://bulma.io/documentation/elements/box/">
                 Boxes
-                </a> 
+                </a>
+            <hr class = "navbar-divider">
             <a class = "navbar-item" href = "https://bulma.io/documentation/elements/box/">
                 Elements
             </a>
