one tiny typo that fixed it

--- a/no-framework/BulmaWebsiteRecreation.html
+++ b/no-framework/BulmaWebsiteRecreation.html
@@ -9,7 +9,7 @@
     <title>BulmaWebsiteRecreation</title>
 </head>
 <body>
-    <nav class = "navbar-is-primary">
+    <nav class = "navbar is-primary">
         <div class = "navbar-brand">
             <a class = "navbar-item" href="https://bulma.io">
 
