bunch of font changes

--- a/midtermproject/midtermproject.html
+++ b/midtermproject/midtermproject.html
@@ -16,9 +16,8 @@
   <nav class="bg-black white pa3">
     <div class="flex items-center">
       <div class="mr3">
-        <img src= "favicon_io/" alt = "Logo" class="h2 w2">
+        <img src= "favicon/favicon.ico" alt = "Logo" class="h2 w2">
       </div>
-      
       <div class="flex-auto">
         <a href="#" class="link white dim mr2">Sign up</a>
         <a href="#" class="button white dim mr2">Log in</a>
