--- a/midtermproject/midtermproject.html
+++ b/midtermproject/midtermproject.html
@@ -12,13 +12,12 @@
   <title>Web Server Programming Midterm</title>
 </head>
 <body>
-
   <nav class="bg-black white pa3">
     <div class="flex items-center">
       <div class="mr3">
         <img src= "favicon/favicon.ico" alt = "Logo" class="h2 w2">
       </div>
-      <div class="flex-auto">
+      <div class="flex-grow">
         <a href="#" class="link white dim mr2">Sign up</a>
         <a href="#" class="button white dim mr2">Log in</a>
         <a href="https://twitter.com/?lang=en" class="button white dim mr2">Twitter</a>
