--- a/midtermproject/midtermproject.html
+++ b/midtermproject/midtermproject.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="stylesheet" href ="styles.css">
-  <title>Web Server Programming Midterm</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <nav class="bg-black white pa3">
-    <div class="flex items-center">
-      <div class="mr3">
-        <img src= "favicon/favicon.ico" alt = "Logo" class="h2 w2">
-      </div>
-      <div class="flex-grow">
-        <a href="#" class="link white dim mr2">Sign up</a>
-        <a href="#" class="button white dim mr2">Log in</a>
-        <a href="https://twitter.com/?lang=en" class="button white dim mr2">Twitter</a>
-      </div>
-    </div>
-  </nav>
+    
 </body>
 </html>
