--- a/midtermproject/midtermproject.html
+++ b/midtermproject/midtermproject.html
@@ -10,18 +10,18 @@
 <body>
     <div x-data="{ open: false }">
         <!-- Navbar -->
-        <nav class="bg-blue-500 p-4">
+        <nav class="bg-black-500 p-4">
           <div class="container mx-auto flex items-center justify-between">
             <!-- Logo -->
             <div>
-              <a href="" class="text-white text-lg font-bold">Logo</a>
+              <a href="favicon\favicon.ico" class="text-white text-lg font-bold"></a>
             </div>
       
-            <!-- Navbar Links -->
+
             <div class="space-x-4">
               <a href="#" class="text-white">Home</a>
               
-              <!-- Dropdown Menu -->
+
               <div x-data="{ open: false }" @click.away="open = false">
                 <button @click="open = !open" class="text-white">Services</button>
                 <div x-show="open" class="absolute mt-2 bg-white shadow-md rounded-md p-2 space-y-2">
