got navbar to work

--- a/midtermproject/midtermproject.html
+++ b/midtermproject/midtermproject.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <title>Website Recreation</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>Website Recreation</title>
 </head>
 
-<body class="bg-black-100">
-    <div class="bg-blue-500 text-white w-64 p-4">
-      <nav class = "flex items-center justify-between"></nav>
-      <h1 class="text-2xl font-semibold">Website</h1>
-      <ul class = "flex space-x-4">
-        <li class=><a href="#" class="hover:bold">Home</a></li>
-        <li class=><a href="#" class="hover:bold">Login</a></li>
-        <li class=><a href="#" class="hover:bold">Signup</a></li>
-        <li class=><a href="#" class="hover:bold">Users</a></li>
-      </ul>
+<body class="bg-gray-100">
+
+    <div class="bg-black text-white p-4">
+        <nav class="flex items-center justify-between">
+            <h1 class="text-2xl font-semibold">RB Fitness </h1>
+            <ul class="flex space-x-4">
+                <li><a href="#" class="hover:underline">Home</a></li>
+                <li><a href="#" class="hover:underline">Login</a></li>
+                <li><a href="#" class="hover:underline">Signup</a></li>
+                <li><a href="#" class="hover:underline">Users</a></li>
+            </ul>
+        </nav>
     </div>
 
     <div class="p-8">
-      <h1 class="text-2xl font-semibold mb-4">Content</h1>
-      <p>Main content</p>
+        <h1 class="text-2xl font-semibold mb-4">This is Robert Bonet's fitness app</h1>
+        <p>Main content</p>
     </div>
-  </div>
 
 </body>
+
 </html>
