changed entire framework

--- a/midtermproject/midtermproject.html
+++ b/midtermproject/midtermproject.html
@@ -5,28 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <title>Website Recreation</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Midterm WSPClass</title>
 </head>
-
-<body class="bg-gray-100">
-
-    <div class="bg-black text-white p-4">
-        <nav class="flex items-center justify-between">
-            <h1 class="text-2xl font-semibold">RB Fitness </h1>
-            <ul class="flex space-x-4">
-                <li><a href="#" class="hover:underline">Home</a></li>
-                <li><a href="#" class="hover:underline">Login</a></li>
-                <li><a href="#" class="hover:underline">Signup</a></li>
-                <li><a href="#" class="hover:underline">Users</a></li>
-            </ul>
-        </nav>
+<div class="navbar bg-base-100">
+    <div class="navbar-start">
+      <div class="dropdown">
+        <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
+        </div>
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+          <li><a>Log In</a></li>
+          <li><a>Sign Up</a></li>
+          <li><a>Manage Users</a></li>
+        </ul>
+      </div>
     </div>
-
-    <div class="p-8">
-        <h1 class="text-2xl font-semibold mb-4">This is Robert Bonet's fitness app</h1>
-        <p>Main content</p>
+    <div class="navbar-center">
+      <a class="btn btn-ghost text-xl">RB Fitness App</a>
     </div>
-
+    <div class="navbar-end">
+        <!---THIS WILL BE FOR THE RIgHT SIDE OF THE SCREEN, FILL WITH WAHTEVER YOU NEED FORR THE PROJECT-->
+    </div>
+  </div>
 </body>
-
 </html>
