--- a/midtermproject/midtermproject.html
+++ b/midtermproject/midtermproject.html
@@ -1,33 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.2/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Midterm WSPClass</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.2/dist/full.min.css" rel="stylesheet">
+  <title>Midterm WSPClass</title>
 </head>
-<div class="navbar bg-base-100">
-    <div class="navbar-start">
-      <div class="dropdown">
-        <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
-        </div>
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-          <li><a>Log In</a></li>
-          <li><a>Sign Up</a></li>
-          <li><a>Manage Users</a></li>
-        </ul>
-      </div>
+<body>
+  <div class="navbar bg-base-100">
+    <div class="flex-1">
+      <a class="btn btn-ghost text-xl">LOGO</a>
     </div>
-    <div class="navbar-center">
-      <a class="btn btn-ghost text-xl">RB Fitness App</a>
+
+    <div class="flex-1">
+      <a class="btn btn-ghost">My Activity</a>
     </div>
-    <div class="navbar-end">
-        <!---THIS WILL BE FOR THE RIgHT SIDE OF THE SCREEN, FILL WITH WAHTEVER YOU NEED FORR THE PROJECT-->
+
+    <div class="flex-1">
+      <a class="btn btn-ghost">Statistics</a>
+    </div>
+
+    <div class="flex-1">
+      <a class="btn btn-ghost">Friends Activity</a>
+    </div>
+
+    <div class="flex-1">
+      <a class="btn btn-ghost">People Search</a>
+    </div>
+
+    <div class="flex-1 dropdown">
+      <a class="btn btn-ghost">Admin</a>
+    </div>
+
+    <div class="flex-none">
+      <ul class="menu menu-horizontal px-1">
+        <li><a>Sign Up</a></li>
+        <li>
+          <details>
+            <summary>
+              Log In
+            </summary>
+            <ul class="p-2 bg-base-100 rounded-t-none">
+              <li><a>Nita</a></li>
+              <li><a>Chico</a></li>
+              <li><a>Robert</a></li>
+            </ul>
+          </details>
+        </li>
+        <li><a href="https://instagram.com">INSTAGRAM</a></li>
+      </ul>
     </div>
   </div>
+
+  <div class="mt-4">
+    <p class="text-center text-xl text-white-800">
+      "I see now that the circumstances of one's birth is irrelevant,
+      it is what you do with the gift of life that determines who you 
+      are." -Mewtwo
+    </p>
+  </div>
+
+
+<!--THIS IS FOR THE RECORDED TRACKING OF YOUR FITNESS GOALS-->
+<div class = "stats stat-vertical shadow">
+  <div class="stats shadow">
+    <div class="stat-title">Your Progess this week:</div>
+    <div class="stat-value text-primary">13.51 miles</div>
+    <div class="stat-desc">1.49 miles short of weekly goal</div>
+  </div>
+
+  <div class="stats shadow">
+    <div class="stat-title">Your Progess today, Sunday, April 14th 2024:</div>
+    <div class="stat-value text-primary">1.46 miles</div>
+    <div class="stat-desc">13.54 miles short of weekly goal</div>
+  </div>
+</div>
 </body>
 </html>
