--- a/midtermproject/midtermproject.html
+++ b/midtermproject/midtermproject.html
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <title>Website Recreation</title>
-</head>
-
-<body class="bg-gray-100">
-
-    <div class="bg-black text-white p-4">
-        <nav class="flex items-center justify-between">
-            <h1 class="text-2xl font-semibold">RB Fitness </h1>
-            <ul class="flex space-x-4">
-                <li><a href="#" class="hover:underline">Home</a></li>
-                <li><a href="#" class="hover:underline">Login</a></li>
-                <li><a href="#" class="hover:underline">Signup</a></li>
-                <li><a href="#" class="hover:underline">Users</a></li>
-            </ul>
-        </nav>
-    </div>
-
-    <div class="p-8">
-        <h1 class="text-2xl font-semibold mb-4">This is Robert Bonet's fitness app</h1>
-        <p>Main content</p>
-    </div>
-
+    <title>Midterm Project</title>
+    <link rel="stylesheet" href="midtermproject.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    </head>
+<body>
+    <nav class="bg-black">
+        <ul class="flex justify-center items-center text-white">
+            <li class="mr-6"><a href="#">Sign-up</a></li>
+            <li class="mr-6"><a href="#">Log-in</a></li>
+            <li class="mr-6"><a href="#">Tweet</a></li>
+        </ul>
+    </nav>
+         
 </body>
-
 </html>
