--- a/midtermproject/midtermproject.html
+++ b/midtermproject/midtermproject.html
@@ -9,7 +9,7 @@
     </head>
 <body>
     <nav class="bg-black">
-        <ul class="flex justify-center items-center text-white">
+        <ul class="flex justify-center items-left text-white">
             <li class="mr-6"><a href="#">Sign-up</a></li>
             <li class="mr-6"><a href="#">Log-in</a></li>
             <li class="mr-6"><a href="#">Tweet</a></li>
